Install TypeScript, update readme, remove package-lock

--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
   "license": "UNLICENSED",
   "dependencies": {
     "discord.js": "^12.5.3"
+  },
+  "devDependencies": {
+    "typescript": "^4.3.5"
   }
 }
