--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "Discord bot for GatorNuggets",
   "main": "main",
   "scripts": {
-    "test": "test"
+    "watch": "tsc -w",
+    "start": "ts-node src/app.ts",
+    "dev": "nodemon dist/app.js",
+    "test": "jest",
+    "build": "npx tsc"
   },
   "repository": {
     "type": "git",
@@ -19,6 +23,9 @@
     "discord.js": "^12.5.3"
   },
   "devDependencies": {
+    "@types/jest": "^26.0.24",
+    "@types/node": "^16.3.1",
+    "jest": "^27.0.6",
     "typescript": "^4.3.5"
   }
 }
