--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "devDependencies": {
     "@types/jest": "^26.0.24",
     "@types/node": "^16.3.1",
+    "@types/ws": "^7.4.6",
     "jest": "^27.0.6",
     "typescript": "^4.3.5"
   }
